<?xml version="1.0"?>
<package format="2">
  <name>caros_camera</name>
  <version>0.0.1</version>
  <description>CAROS Camera node</description>
  <maintainer email="anpl@mmmi.sdu.dk">prier</maintainer>
  <license>BSD</license>
  <url type="website">https://gitlab.com/caro-sdu/caros/wikis/home</url>
  <url type="repository">https://gitlab.com/caro-sdu/caros.git</url>
  <url type="bugtracker">https://gitlab.com/caro-sdu/caros/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>tf_conversions</build_depend>

  <build_export_depend>dynamic_reconfigure</build_export_depend>
  <build_export_depend>pcl_conversions</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>tf_conversions</build_export_depend>

  <depend>std_msgs</depend>
  <depend>roscpp</depend>
  <depend>rosconsole</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>caros_control_msgs</depend>
  <depend>caros_sensor_msgs</depend>
  <depend>caros_common_msgs</depend>
  <depend>caros_common</depend>
  <depend>caros_common_robwork</depend>
  <depend>caros_control</depend>
  <depend>caros_sensor</depend>

  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>tf_conversions</exec_depend>

  <doc_depend>doxygen</doc_depend>
  <doc_depend>rosdoc_lite</doc_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>

</package>
