<?xml version="1.0"?>
<package format="2">
  <name>caros_robotiq</name>
  <version>0.0.1</version>
  <description> robotiq hand drivers </description>
  <maintainer email="kraft@mmmi.sdu.dk">kraft</maintainer>
  <license>BSD</license>
  <url type="website">https://gitlab.com/caro-sdu/caros/wikis/home</url>
  <url type="repository">https://gitlab.com/caro-sdu/caros.git</url>
  <url type="bugtracker">https://gitlab.com/caro-sdu/caros/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roslint</build_depend>

  <depend>std_msgs</depend>
  <depend>roscpp</depend>
  <depend>caros_common</depend>
  <depend>caros_control</depend>

  <exec_depend>message_runtime</exec_depend>

  <doc_depend>doxygen</doc_depend>
  <doc_depend>rosdoc_lite</doc_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>

</package>
