<?xml version="1.0"?>
<package format="2">
  <name>caros_schunkpg70</name>
  <version>0.0.1</version>
  <description>CAROS schunkpg70 gripper node</description>
  <maintainer email="lschw12@student.sdu.dk">Lukas S.</maintainer>
  <license>BSD</license>
  <url type="website">https://gitlab.com/caro-sdu/caros/wikis/home</url>
  <url type="repository">https://gitlab.com/caro-sdu/caros.git</url>
  <url type="bugtracker">https://gitlab.com/caro-sdu/caros/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslint</build_depend>

  <depend>roscpp</depend>
  <depend>rosconsole</depend>
  <depend>caros_common</depend>
  <depend>caros_control</depend>

  <test_depend>rostest</test_depend>

  <doc_depend>doxygen</doc_depend>
  <doc_depend>rosdoc_lite</doc_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>

</package>
